Bug 405300 - ignore transformation in isPointInPath(). r=joe sr=roc